@@ -42,7 +42,7 @@ ENDIF (NOT UNIX)
 SET (QX11GRAB_VERSION_MAJOR 0)
 SET (QX11GRAB_VERSION_MINOR 4)
 SET (QX11GRAB_VERSION_RELEASE 2)
-SET (QX11GRAB_VERSION_DEVELOPMENT "rc1")
+SET (QX11GRAB_VERSION_DEVELOPMENT "rc2")
 SET (QX11GRAB_VERSION "${QX11GRAB_VERSION_MAJOR}.${QX11GRAB_VERSION_MINOR}.${QX11GRAB_VERSION_RELEASE}${QX11GRAB_VERSION_DEVELOPMENT}")
 SET (QX11GRAB_DBUS_DOMAIN_NAME "de.hjcms.qx11grab")
 # If Git is installed and a '.git' directory is found,
